package creational.singleton.A4;

public enum Candidate {
    TRUMP, BIDEN
}
